# python-versions-pz

./: .pr-body-arch-fix.md  .pr-body-pr22.md  .pr-body-pr23.md  .pr-body-pr25.md  .pr-body-trivy.md  .pr-body.md  .whitesource  CONTRIBUTING.md  Makefile  README.md  TESTING_YAML_FILTER.md  pyproject.toml  versions-manifest.json
.github/: CODEOWNERS  ISSUE-15-INVESTIGATION.md  actionlint.yaml
PowerShell/: Dockerfile  dotnet-install.py
python-versions/: Dockerfile  trivy-checksums.txt  trivy-gate.sh
scripts/: verify-trivy.sh
tests/: TESTING.md  __init__.py  conftest.py  test_apply_partial_manifests.py  test_dotnet_install.py  test_generate_partial_manifest.py  test_get_python_version.py  test_models_and_manifest_tools.py  test_package_compatibility.py  test_workflow_yaml_integration.py  test_yaml_filter_and_release_types.py
versions-manifests/: 3.10.0-ppc64le.json  3.10.0-s390x.json  3.10.1-ppc64le.json  3.10.1-s390x.json  3.10.10-ppc64le.json  3.10.10-s390x.json  3.10.11-ppc64le.json  3.10.11-s390x.json  3.10.12-ppc64le.json  3.10.12-s390x.json  3.10.13-ppc64le.json  3.10.13-s390x.json  3.10.14-ppc64le.json  3.10.14-s390x.json  3.10.15-ppc64le.json  3.10.15-s390x.json  3.10.16-ppc64le.json  3.10.16-s390x.json  3.10.17-ppc64le.json  3.10.17-s390x.json  3.10.18-ppc64le.json  3.10.18-s390x.json  3.10.19-ppc64le.json  3.10.19-s390x.json  3.10.2-ppc64le.json  3.10.2-s390x.json  3.10.3-ppc64le.json  3.10.3-s390x.json  3.10.4-ppc64le.json  3.10.4-s390x.json  3.10.5-ppc64le.json  3.10.5-s390x.json  3.10.6-ppc64le.json  3.10.6-s390x.json  3.10.7-ppc64le.json  (+113 more)
(+17 files in other folders)
